package edu.fiuba.algo3.model;

public class OptionGroup {
	
	private String text;
	
	public OptionGroup(String text) {
		this.text = text;
	}

	public String getText() {
		return text;
	}

	public void setText(String text) {
		this.text = text;
	}

}
